# clictagger

./: .buildinfo  .gitignore  CHANGES.rst  LICENSE  Makefile  README.rst  conftest.py  dev-requirements.txt  environment-windows.yml  environment.yml  file-upload.ipynb  getting_started.ipynb  index.html  objects.inv  pyproject.toml  recording_animation.sh  requirements.txt  searchindex.js  setup.cfg  setup.py
_sources/: clictagger.region.chapter.rst.txt  clictagger.region.metadata.rst.txt  clictagger.region.quote.rst.txt  clictagger.region.rst.txt  clictagger.region.suspension.rst.txt  clictagger.region.tag.rst.txt  clictagger.script.rst.txt  clictagger.taggedtext.rst.txt  clictagger.tokenizer.rst.txt  import-csv-excel.rst.txt  index.rst.txt  python-notebooks.rst.txt  text-cleaning.rst.txt
clictagger/: __init__.py  icuconfig.py  markup.py  script.py  table.py  taggedtext.py  tokenizer.py
clictagger.region/: index.html
clictagger.region.chapter/: index.html
clictagger.region.metadata/: index.html
clictagger.region.quote/: index.html
clictagger.region.suspension/: index.html
clictagger.region.tag/: index.html
clictagger.script/: index.html
clictagger.taggedtext/: index.html
clictagger.tokenizer/: index.html
docs/: Makefile  conf.py  import-csv-excel.rst  index.rst  python-notebooks.rst  text-cleaning.rst
genindex/: index.html
import-csv-excel/: index.html
py-modindex/: index.html
python-notebooks/: index.html
references/: index.html
search/: index.html
tests/: test_script.py  test_tokenizer.py
text-cleaning/: index.html
(+10 files in other folders)
